--- a/localisation/religion_l_english.yml
+++ b/localisation/religion_l_english.yml
@@ -107,5 +107,7 @@
  addaway_desc:0 "Tyr is the one-handed god of justice and one of the most courageous gods."
  cyrus:0 "Cyrus"
  cyrus_desc:0 "Snotra is the clever goddess. A wise man or woman can be called snotr in her honor."
- doxus:0 "Doxus"
- doxus_desc:0 "The father of Freya, god of the sea and wealth will bring food to the table for his worshippers."
+ paradoxus:0 "Paradoxus"
+ paradoxus_desc:0 "The father of Freya, god of the sea and wealth will bring food to the table for his worshippers."
+ wikkel:0 "Wikkel"
+ wikkel_desc:0 "The father of Freya, god of the sea and wealth will bring food to the table for his worshippers."
