--- a/localisation/snekism_l_english.yml
+++ b/localisation/snekism_l_english.yml
@@ -1,16 +1,18 @@
 ﻿l_english:
- snek:0 "Victorian Snekism"
- alfr:0 "Álfr"
- alfr_desc:0 "Odin is the major god of the Norse pantheon, commonly associated with war, victory and death."
- cuthberht:0 "Cuthberht"
- cuthberht_desc:0 "Freyja is the goddess commonly worshipped for her love, beauty, fertility and her promises of wealth."
- urfkell:0 "Úrfkell"
- urfkell_desc:0 "Tor is the son of Odin and is the god protecting humankind against the terrors trying to enter Midgard."
- addaway:0 "Addaway"
- addaway_desc:0 "Tyr is the one-handed god of justice and one of the most courageous gods."
- cyrus:0 "Cyrus"
- cyrus_desc:0 "Snotra is the clever goddess. A wise man or woman can be called snotr in her honor."
- paradoxus:0 "Paradoxus"
- paradoxus_desc:0 "The father of Freya, god of the sea and wealth will bring food to the table for his worshippers."
- wikkel:0 "Wikkel"
- wikkel_desc:0 "The father of Freya, god of the sea and wealth will bring food to the table for his worshippers."
+  snek:0 "Victorian Snekism"
+  alfr:0 "Álfr"
+  alfr_desc:0 "Odin is the major god of the Norse pantheon, commonly associated with war, victory and death."
+  cuthberht:0 "Cuthberht"
+  cuthberht_desc:0 "Freyja is the goddess commonly worshipped for her love, beauty, fertility and her promises of wealth."
+  urfkell:0 "Úrfkell"
+  urfkell_desc:0 "Tor is the son of Odin and is the god protecting humankind against the terrors trying to enter Midgard."
+  addaway:0 "Addaway"
+  addaway_desc:0 "Tyr is the one-handed god of justice and one of the most courageous gods."
+  cyrus:0 "Cyrus"
+  cyrus_desc:0 "Snotra is the clever goddess. A wise man or woman can be called snotr in her honor."
+  paradoxus:0 "Paradoxus"
+  paradoxus_desc:0 "The father of Freya, god of the sea and wealth will bring food to the table for his worshippers."
+  wikkel:0 "Wikkel"
+  wikkel_desc:0 "The father of Freya, god of the sea and wealth will bring food to the table for his worshippers."
+
+  SNEKIST:0 "Snekist Heretics"
