--- a/localisation/snekism_l_english.yml
+++ b/localisation/snekism_l_english.yml
@@ -1,18 +1,23 @@
 ﻿l_english:
-  snek:0 "Victorian Snekism"
-  alfr:0 "Álfr"
-  alfr_desc:0 "Odin is the major god of the Norse pantheon, commonly associated with war, victory and death."
-  cuthberht:0 "Cuthberht"
-  cuthberht_desc:0 "Freyja is the goddess commonly worshipped for her love, beauty, fertility and her promises of wealth."
-  urfkell:0 "Úrfkell"
-  urfkell_desc:0 "Tor is the son of Odin and is the god protecting humankind against the terrors trying to enter Midgard."
-  addaway:0 "Addaway"
-  addaway_desc:0 "Tyr is the one-handed god of justice and one of the most courageous gods."
-  cyrus:0 "Cyrus"
-  cyrus_desc:0 "Snotra is the clever goddess. A wise man or woman can be called snotr in her honor."
-  paradoxus:0 "Paradoxus"
-  paradoxus_desc:0 "The father of Freya, god of the sea and wealth will bring food to the table for his worshippers."
-  wikkel:0 "Wikkel"
-  wikkel_desc:0 "The father of Freya, god of the sea and wealth will bring food to the table for his worshippers."
-
-  SNEKIST:0 "Snekist Heretics"
+ snek:0 "Victorian Snekism"
+ alfr:0 "Álfr"
+ alfr_desc:0 "Cuthberht, one of the three Victorians, is a saint of justice and prosperity, celebrated by those who wish for equality and fair treatment for all"
+ cuthberht:0 "Cuthberht"
+ cuthberht_desc:0 "Freyja is the goddess commonly worshipped for her love, beauty, fertility and her promises of wealth."
+ urfkell:0 "Úrfkell"
+ urfkell_desc:0 "Úlfkell, one of the three Victorians, is a one eyed saint of war, warriors pray to him for prowess in the battlefield"
+ addaway:0 "Addaway"
+ addaway_desc:0 "Tyr is the one-handed god of justice and one of the most courageous gods."
+ cyrus:0 "Cyrus"
+ cyrus_desc:0 "Snotra is the clever goddess. A wise man or woman can be called snotr in her honor."
+ paradoxus:0 "Paradoxus"
+ paradoxus_desc:0 "The father of Freya, god of the sea and wealth will bring food to the table for his worshippers."
+ wikkel:0 "Wikkel"
+ wikkel_desc:0 "The father of Freya, god of the sea and wealth will bring food to the table for his worshippers."
+ snek_rebels_title:0 "Religious"
+ snek_rebels_name:0 "$RELIGION$ Zealots"
+ snek_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ snek_rebels_army:0 "$RELIGION$ Army"
+ snek_rebels_demand:0 "Convert $COUNTRYNAME$"
+ snek_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ PURE_SNEK:0 "Snek Purists"
