Event1 mostly done

--- a/localisation/snekism_l_english.yml
+++ b/localisation/snekism_l_english.yml
@@ -1,17 +1,17 @@
 ﻿l_english:
  snek:0 "Victorian Snekism"
  alfr:0 "Álfr"
- alfr_desc:0 "Cuthberht, one of the three Victorians, is a saint of justice and prosperity, celebrated by those who wish for equality and fair treatment for all"
+ alfr_desc:0 "Álfr, one of the three Victorians, is a saint of diplomacy and compromise, worshipped by those who hope for a peaceful future of our nation."
  cuthberht:0 "Cuthberht"
- cuthberht_desc:0 "Freyja is the goddess commonly worshipped for her love, beauty, fertility and her promises of wealth."
+ cuthberht_desc:0 "Cuthberht, one of the three Victorians, is a saint of justice and prosperity, celebrated by those who wish for equality and fair treatment for all."
  urfkell:0 "Úrfkell"
  urfkell_desc:0 "Úlfkell, one of the three Victorians, is a one eyed saint of war, warriors pray to him for prowess in the battlefield"
  addaway:0 "Addaway"
- addaway_desc:0 "Tyr is the one-handed god of justice and one of the most courageous gods."
+ addaway_desc:0 "Saint of pragmatism and lawfulness, people of Victorian-Snekism pray to Addaway in hopes of a consistent and stable future."
  cyrus:0 "Cyrus"
  cyrus_desc:0 "Snotra is the clever goddess. A wise man or woman can be called snotr in her honor."
  paradoxus:0 "Paradoxus"
- paradoxus_desc:0 "The father of Freya, god of the sea and wealth will bring food to the table for his worshippers."
+ paradoxus_desc:0 "They call him Doxus "the Great Uniter", known for unifying the people of Victorian-Snekism under a single banner, many believe that he is the key to proselytizing natives of new worlds."
  wikkel:0 "Wikkel"
  wikkel_desc:0 "The father of Freya, god of the sea and wealth will bring food to the table for his worshippers."
  snek_rebels_title:0 "Religious"
