--- a/localisation/snekism_l_english.yml
+++ b/localisation/snekism_l_english.yml
@@ -9,11 +9,11 @@
  addaway:0 "Addaway"
  addaway_desc:0 "Saint of pragmatism and lawfulness, people of Victorian-Snekism pray to Addaway in hopes of a consistent and stable future."
  cyrus:0 "Cyrus"
- cyrus_desc:0 "Snotra is the clever goddess. A wise man or woman can be called snotr in her honor."
+ cyrus_desc:0 "Saint of Progress and Technology, Cyrus is celebrated for his ingenuity, some even believe he heard whispers from the divine, inspiring the development of our world."
  paradoxus:0 "Paradoxus"
  paradoxus_desc:0 "They call him Doxus "the Great Uniter", known for unifying the people of Victorian-Snekism under a single banner, many believe that he is the key to proselytizing natives of new worlds."
  wikkel:0 "Wikkel"
- wikkel_desc:0 "The father of Freya, god of the sea and wealth will bring food to the table for his worshippers."
+ wikkel_desc:0 "Brother Wikkel was responsible for leading the ancient Sneklings into the loving arms of Victoria. His meetings with Doxus formed the backbone of our religion."
  snek_rebels_title:0 "Religious"
  snek_rebels_name:0 "$RELIGION$ Zealots"
  snek_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
