--- a/localisation/snekreligion_l_english.yml
+++ b/localisation/snekreligion_l_english.yml
@@ -20,3 +20,11 @@
   snekreligion.3_name:0 "The Reconquest of Albion"
   snekreligion.3_desc:0 "We have done it. We have reclaimed our homeland and freed it from tyrannical heathen rulers. This is but the first step to realizing our dream of the Third coming of Victoria!"
   snekreligion.3_1:0 "Britons never, never, never shall be slaves!"
+
+
+
+ #William Shakespeare and the Three Victorians
+  snekreligion.5_name:0 "William Shakespeare and the Three Victorians"
+  snekreligion.5_desc:0 "A young man named William Shakespeare has written a play chronicling the saga of the legendary “Three Victorians'' of Cuthberht, Álfr, and Úrfkell. His plays are garnering significant attention from peasants and nobles alike. "
+  snekreligion.5_1:0 "That Shakespeare is a passing fad. He’ll never make it anywhere!"
+  snekreligion.5_2:0 "We must recruit this man into our court!"
