Descriptions, bug fixes, etc.

--- a/localisation/snekism_l_english.yml
+++ b/localisation/snekism_l_english.yml
@@ -21,3 +21,4 @@
  snek_rebels_demand:0 "Convert $COUNTRYNAME$"
  snek_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  PURE_SNEK:0 "Snek Purists"
+ snek_religion_desc:1 "The Church of the Victorious Snek was one of the great ancient religions that dominated the world. However, in recent centuries more popular heathen religions began to capture the minds of its followers, culminating in the so-called “Saint” Patrick driving the remaining Victorians into the sea. However, in the 9th Century, the Church was reestablished in Albion. It now stands poised to once again dominate the world."
