--- a/localisation/snekmodifiers_l_english.yml
+++ b/localisation/snekmodifiers_l_english.yml
@@ -4,3 +4,4 @@
   counting_count:0 "Counting Count"
   snk_reject_nahuatl:0 "Rejected Nahuatl"
   snk_tolerate_nahuatl:0 "Tolerated Nahuatl"
+  snk_ireland_conversion:0 "The Conversion of Ireland"
