--- a/localisation/snekreligion_l_english.yml
+++ b/localisation/snekreligion_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english: 
-  #Rediscovering our roots? - Teotihuacan
+ #Rediscovering our roots? - Teotihuacan
   snekreligion.1_name:0 "Rediscovering our roots?"
   snekreligion.1_desc:0 "After our brave conquistadors entered Teotihuacan, they discovered something disturbing. After the giant heathen temples were ransacked by our soldiers, they found images of a “heathen god” which bore a striking resemblance to our Lord, Snek. Some soldiers have proclaimed this to be blasphemy, but our priests are intrigued by where these people gained this knowledge."
   snekreligion.1_1:0 "Heathens, all of them!"
@@ -11,16 +11,20 @@
   snk_reject_nahuatl:0 "Reject Nahuatl"
   desc_snk_reject_nahuatl:0 "The Nahuatl worship a strange and foreign god in the image of the Victorious Snek. We must rapidly convert them to our ways."
 
-  #A Most Serpentine & Serene Quincentenary
+ #A Most Serpentine & Serene Quincentenary
   snekreligion.2_name:0 "A Most Serpentine & Serene Quincentenary"
   snekreligion.2_desc:0 "It has been 500 years since the founding of our church. Long have we waited for the return of our scaled queen. Times have been dark, subjugation at the hands of Alba, cruel. But, as we near the anniversary, the peasants have been whispering of a new golden era. Is it time once again to slither out of obscurity? Is it time to cease waiting, and begin heralding the return of Victoria? Indeed it is! We shall weather all incoming storms and retake our island, whatever the cost may be!"
   snekreligion.2_1:0 "And weather it we shall!"
 
-  #The Reconquest of Albion
+ #The Reconquest of Albion
   snekreligion.3_name:0 "The Reconquest of Albion"
   snekreligion.3_desc:0 "We have done it. We have reclaimed our homeland and freed it from tyrannical heathen rulers. This is but the first step to realizing our dream of the Third coming of Victoria!"
   snekreligion.3_1:0 "Britons never, never, never shall be slaves!"
 
+ #The Conversion of Ireland
+  snekreligion.4_name:0 "The Conversion of Ireland"
+  snekreligion.4_desc:0 "Long ago the apostate “Saint'' Patrick turned his back on Victorian-Snekism and drove its followers into the sea. Today we rectify that catastrophe by throwing all Catholic items into the sea! We have returned Ireland to the true faith! Ave Victoria! Ave Snek!"
+  snekreligion.4_1:0 "Revenge isss a disssh bessst ssserved cold"
 
  #William Shakespeare and the Three Victorians
   snekreligion.5_name:0 "William Shakespeare and the Three Victorians"
