--- a/localisation/snekism_l_english.yml
+++ b/localisation/snekism_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- snek:0 "Victorian Snekism"
+ snek:0 "Victorian-Snekist"
  alfr:0 "Álfr"
  alfr_desc:0 "Álfr, one of the three Victorians, is a saint of diplomacy and compromise, worshipped by those who hope for a peaceful future of our nation."
  cuthberht:0 "Cuthberht"
