Added modifiers for the Berwickshire
Added modifiers for the Berwickshire Reclaimed event chain

--- a/localisation/snekmodifiers_l_english.yml
+++ b/localisation/snekmodifiers_l_english.yml
@@ -5,3 +5,6 @@
   snk_reject_nahuatl:0 "Rejected Nahuatl"
   snk_tolerate_nahuatl:0 "Tolerated Nahuatl"
   snk_ireland_conversion:0 "The Conversion of Ireland"
+  cunning_plan:0 "A Cunning Plan"
+  cunning_plan:0 "A Cunning Plan?"
+  beckshwire_reclaimed:0 "Berwickshire Reclaimed"
