--- a/localisation/snekreligion_l_english.yml
+++ b/localisation/snekreligion_l_english.yml
@@ -54,5 +54,8 @@
   snekreligion.8_2:0 "We will support him in his quest for equality"
   snekreligion.8_3:0 "We must oppose him"
   snekreligion.6_4:0 "I suppose we could let it play out"
+  
+  #Holy site reclaimed: Berwickshire
+  snekreligion.9_name:0 "Holy site reclaimed, Berwichshire"
 
 
