Fixed syntax and added ReconUHD's events

--- a/localisation/snekmodifiers_l_english.yml
+++ b/localisation/snekmodifiers_l_english.yml
@@ -8,3 +8,5 @@
   cunning_plan:0 "A Cunning Plan"
   cunning_plan:0 "A Cunning Plan?"
   beckshwire_reclaimed:0 "Berwickshire Reclaimed"
+  victorious_suffragettes:0 "Victorious Suffragettes"
+  unfaithful_government:0 "Unfaithful Government"
