--- a/localisation/snekreligion_l_english.yml
+++ b/localisation/snekreligion_l_english.yml
@@ -55,20 +55,28 @@
   snekreligion.8_3:0 "We must oppose him"
   snekreligion.8_4:0 "I suppose we could let it play out"
   
-  #Holy site reclaimed: Berwickshire
+ #Holy site reclaimed: Berwickshire
   snekreligion.9_name:0 "Holy site reclaimed, Berwichshire"
   snekreligion.9_desc:0 "We have successfully reclaimed one of the holy sites of the Church of the Victorious Snek. We have the opportunity to rename it to its original Victorian name, but a local noble called Lord Edmund has suggested an alternative. He insists it is only the first stage in his ‘cunning plan’..."
   snekreligion.9_1:0 "Restore its proper name, Berwickshire!"
   snekreligion.9_2:0 "Rename it after a local river"
   
-  #A Cunning Plan
+ #A Cunning Plan
   snekreligion.10_name:0 "A Cunning Plan"
   snekreligion.10_desc:0 "As cunning as a fox who’s just been appointed professor of cunning at Oxford University?"
   snekreligion.10_1:0 "How are you feeling Darling?"
   
-  #A Cunning Plan?
+ #A Cunning Plan?
   snekreligion.11_name:0 "A Cunning Plan?"
   snekreligion.11_desc:0 "Well I’m afraid it’ll have to wait. Whatever it was, I’m sure it was better than my plan to get out of this by pretending to be mad."
   snekreligion.11_1:0 "Who would have noticed another madman around here?"
+  
+ #symposium
+  englishport.1.t:0 "Symposium of Faith and Knowledge"
+  englishport.1.d:0 "Our Churches are vital platforms of intellectual and policy debate. Our Goddess, Victoria, was a Queen of wisdom and enlightenment. Our God, Snek, embodies the persuit of enlightenment through meandering and protracted debates.This year, the much anticipated subject was Root.OxOrBridgeSubject . The findings and their rigorous, protracted debates are a sure sign of our faith.  "
+  englishport.1.a:0 "Splendid!"
 
-
+  englishport.2.t:0 "Female Sufferage"
+  englishport.2.d:0 "Years ago, a “Voting Reform Act” was mandated by our overlord which specified that only male persons may hold the right to vote, undermining the rights held by women guaranteed by the Victorian faith. Led by the disgruntled upper-class ladies, women both poor and rich took to the streets during in protest. Their triumphant marching chant “Victorian Votes for Victorian Women!” was sung in chorus throughout the streets of [Root.Capital.GetCapitalName] as declared our independence. Even the most conservative amidst the government cannot deny the wisdom of gender equality from our Queen-Goddess Victoria and the impact her spirit has had on our national identity and our fight for freedom. Though we made no explicit promise to extend suffrage to women, their instrumental role in breaking us free from the shackles of yesterday compels …"
+  englishport.2.a:0 "Enact the reforms! The daughters of Victoria will thank us yet."
+  englishport.2.b:0 "Catastrophe! No deity intended for this ghastly mess!"
