Added more events

--- a/localisation/snekmodifiers_l_english.yml
+++ b/localisation/snekmodifiers_l_english.yml
@@ -10,3 +10,6 @@
   beckshwire_reclaimed:0 "Berwickshire Reclaimed"
   victorious_suffragettes:0 "Victorious Suffragettes"
   unfaithful_government:0 "Unfaithful Government"
+  bureaucratic_defense:0 "Defense through Bureaucracy"
+  glass_crisis:0 "Glass Mania Fallout"
+  scales_of_justice:0 "Catholics Purged"
