--- a/localisation/snekreligion_l_english.yml
+++ b/localisation/snekreligion_l_english.yml
@@ -73,7 +73,7 @@
   
  #symposium
   englishport.1.t:0 "Symposium of Faith and Knowledge"
-  englishport.1.d:0 "Our Churches are vital platforms of intellectual and policy debate. Our Goddess, Victoria, was a Queen of wisdom and enlightenment. Our God, Snek, embodies the persuit of enlightenment through meandering and protracted debates.This year, the much anticipated subject was Root.OxOrBridgeSubject . The findings and their rigorous, protracted debates are a sure sign of our faith."
+  englishport.1.d:0 "Our Churches are vital platforms of intellectual and policy debate. Our Goddess, Victoria, was a Queen of wisdom and enlightenment. Our God, Snek, embodies the persuit of enlightenment through meandering and protracted debates. Each decade will see a new symposium drafted. The findings and their rigorous, protracted debates are a sure sign of our faith."
   englishport.1.a:0 "Splendid!"
 
  #Female Sufferage"
