--- a/localisation/snekreligion_l_english.yml
+++ b/localisation/snekreligion_l_english.yml
@@ -76,8 +76,8 @@
   englishport.1.d:0 "Our Churches are vital platforms of intellectual and policy debate. Our Goddess, Victoria, was a Queen of wisdom and enlightenment. Our God, Snek, embodies the persuit of enlightenment through meandering and protracted debates.This year, the much anticipated subject was Root.OxOrBridgeSubject . The findings and their rigorous, protracted debates are a sure sign of our faith."
   englishport.1.a:0 "Splendid!"
 
- #Female Sufferage"
-  englishport.2.t:0 "Female Sufferage"
+ #Female Suffrage"
+  englishport.2.t:0 "Female Suffrage"
   englishport.2.d:0 "Years ago, a “Voting Reform Act” was mandated by our overlord which specified that only male persons may hold the right to vote, undermining the rights held by women guaranteed by the Victorian faith. Led by the disgruntled upper-class ladies, women both poor and rich took to the streets during in protest. Their triumphant marching chant “Victorian Votes for Victorian Women!” was sung in chorus throughout the streets of [Root.Capital.GetCapitalName] as declared our independence. Even the most conservative amidst the government cannot deny the wisdom of gender equality from our Queen-Goddess Victoria and the impact her spirit has had on our national identity and our fight for freedom. Though we made no explicit promise to extend suffrage to women, their instrumental role in breaking us free from the shackles of yesterday compels…"
   englishport.2.a:0 "Enact the reforms! The daughters of Victoria will thank us yet."
   englishport.2.b:0 "Catastrophe! No deity intended for this ghastly mess!"
