Added modifiers and corrected one

--- a/localisation/snekmodifiers_l_english.yml
+++ b/localisation/snekmodifiers_l_english.yml
@@ -12,4 +12,5 @@
   unfaithful_government:0 "Unfaithful Government"
   bureaucratic_defense:0 "Defense through Bureaucracy"
   glass_crisis:0 "Glass Mania Fallout"
-  scales_of_justice:0 "Catholics Purged"
+  scales_of_justice:0 "Victorian-Snekist resurgence"
+  london_reclimed:0 "London Reclaimed
