--- a/localisation/snekreligion_l_english.yml
+++ b/localisation/snekreligion_l_english.yml
@@ -56,7 +56,7 @@
   snekreligion.8_4:0 "I suppose we could let it play out"
   
  #Holy site reclaimed: Berwickshire
-  snekreligion.9_name:0 "Holy site reclaimed, Berwichshire"
+  snekreligion.9_name:0 "Holy site reclaimed: Berwichshire"
   snekreligion.9_desc:0 "We have successfully reclaimed one of the holy sites of the Church of the Victorious Snek. We have the opportunity to rename it to its original Victorian name, but a local noble called Lord Edmund has suggested an alternative. He insists it is only the first stage in his ‘cunning plan’..."
   snekreligion.9_1:0 "Restore its proper name, Berwickshire!"
   snekreligion.9_2:0 "Rename it after a local river"
@@ -112,7 +112,7 @@
   snekreligion.12_1:0 "Thisss isss a lossss that mussst be avenged"
   
   #Holy site reclamed: London
-  snekreligion.13_name:0 "Holy site reclaimed, London"
+  snekreligion.13_name:0 "Holy site reclaimed: London"
   snekreligion.12_desc:0 "We have successfully reclaimed one of the holy sites of the Church of the Victorious Snek; the birthplace of Victoria herself. Now that we have brought it back into the fold, London is sure to grow into an even greater city under the light and guidance of its divine protector."
   snekreligion.13_1:0 "Victoria would be proud"
   snekreligion.13_2:0 "London will be a metropolis under our rule"
