--- a/localisation/snekmodifiers_l_english.yml
+++ b/localisation/snekmodifiers_l_english.yml
@@ -14,4 +14,7 @@
   glass_crisis:0 "Glass Mania Fallout"
   scales_of_justice:0 "Victorian-Snekist resurgence"
   london_reclimed:0 "London Reclaimed
-  ireland_comverted:0 "The Conversion of Ireland"
+  ireland_converted:0 "The Conversion of Ireland"
+  ulster_burnt:0 "The Burning of Ulster"
+  wight_reclaimed:0 "Wight Reclaimed"
+  
