--- a/localisation/snekreligion_l_english.yml
+++ b/localisation/snekreligion_l_english.yml
@@ -117,3 +117,17 @@
   snekreligion.13_1:0 "Victoria would be proud"
   snekreligion.13_2:0 "London will be a metropolis under our rule"
   
+  #Holy site reclaimed: Isle of Wight
+  snekreligion.14_name:0 "Holy site reclaimed: Isle of Wight"
+  snekreligion.14_desc:0 "We have successfully reclaimed one of the holy sites of the Church of the Victorious Snek. The site in question is the place of death of our great prophet, Victoria, and as such, some are beginning to question whether or not we should permit it to remain dominated by the county of Hampshire."
+  snekreligion.14_1:0 "How dare they overshadow a holy site in such a way!"
+  snekreligion.14_2:0 " It will surely prosper under our rule"
+  
+  #Holy site reclaimed: Ulster
+  snekreligion.15_name:0 "Holy site reclaimed: Ulster"
+  snekreligion.15_desc:0 "We have successfully reclaimed one of the holy sites of the Church of the Victorious Snek. This is no ordinary place however, as Ulster is the place of death of one greatest evils our kind has ever known: St. Patrick; the bane of a once-prosperous realm of our lost brothers in Ireland."
+  snekreligion.15_1:0 "We shall burn his resting place to the ground"
+  snekreligion.15_2:0 "We cannot risk angering the people"
+  
+  
+  
