--- a/localisation/snekmodifiers_l_english.yml
+++ b/localisation/snekmodifiers_l_english.yml
@@ -17,4 +17,5 @@
   ireland_converted:0 "The Conversion of Ireland"
   ulster_burnt:0 "The Burning of Ulster"
   wight_reclaimed:0 "Wight Reclaimed"
+  great_success:0 "Great Success"
   
