Added local for event 16

--- a/localisation/snekreligion_l_english.yml
+++ b/localisation/snekreligion_l_english.yml
@@ -129,5 +129,7 @@
   snekreligion.15_1:0 "We shall burn his resting place to the ground"
   snekreligion.15_2:0 "We cannot risk angering the people"
   
-  
-  
+  #American Dream
+  snekreligion.16_name:0 "American Dream"
+  snekreligion.16_desc:0 "The discovery of the New World has sent waves of hope throughout the nation. Many seek opportunity and flock to settle these new lands. Victorian-Snekist priests are already boarding ships to make the perilous journey and proselytize the natives."
+  snekreligion.16_1:0 "I go to America!"
