Added Bananas localisation

--- a/localisation/snekreligion_l_english.yml
+++ b/localisation/snekreligion_l_english.yml
@@ -133,3 +133,9 @@
   snekreligion.16_name:0 "American Dream"
   snekreligion.16_desc:0 "The discovery of the New World has sent waves of hope throughout the nation. Many seek opportunity and flock to settle these new lands. Victorian-Snekist priests are already boarding ships to make the perilous journey and proselytize the natives."
   snekreligion.16_1:0 "I go to America!"
+
+#Bananas for Bananas
+snekreligion.17_name:0 "Bananas for Bananas"
+snekreligion.17_desc:0 "Recently, one of our head librarians has come to court to request a large sum of bananas to be paid to him. He is only known as the Librarian, and is an orangutan with a brilliant command of the dewey decimal system, but not of the English language. He swung into the palace and angrily demanded "Ook", or else he would "Ook"."
+snekreligion.17_1:0 "Let him have the bananas"
+snekreligion.17_2:0 "We cannot afford it!"
