--- a/localisation/snekism_l_english.yml
+++ b/localisation/snekism_l_english.yml
@@ -9,7 +9,7 @@
  addaway:0 "Addaway"
  addaway_desc:0 "Saint of pragmatism and lawfulness, people of Victorian-Snekism pray to Addaway in hopes of a consistent and stable future."
  cyrus:0 "Cyrus"
- cyrus_desc:0 "Saint of Progress and Technology, Lord Cyrus is celebrated for his ingenuity, some even believe he heard whispers from the divine, inspiring the development of our world."
+ cyrus_desc:0 "Saint of Progress and Technology, Lord Cyrus, Protector of Towns and Devourer of Meal-worms, is celebrated for his ingenuity, some even believe he heard whispers from the divine, inspiring the development of our world."
  paradoxus:0 "Paradoxus"
  paradoxus_desc:0 "They call him Doxus "the Great Uniter", known for unifying the people of Victorian-Snekism under a single banner, many believe that he is the key to proselytizing natives of new worlds."
  wikkel:0 "Wikkel"
