--- a/localisation/snekmodifiers_l_english.yml
+++ b/localisation/snekmodifiers_l_english.yml
@@ -18,4 +18,4 @@
   ulster_burnt:0 "The Burning of Ulster"
   wight_reclaimed:0 "Wight Reclaimed"
   great_success:0 "Great Success"
-  
+  anglo_dutch_culture:0 "Nedersakisch resistance"
