--- a/localisation/snekreligion_l_english.yml
+++ b/localisation/snekreligion_l_english.yml
@@ -139,3 +139,18 @@
   snekreligion.17_desc:0 "Recently, one of our head librarians has come to court to request a large sum of bananas to be paid to him. He is only known as the Librarian, and is an orangutan with a brilliant command of the dewey decimal system, but not of the English language. He swung into the palace and angrily demanded "Ook", or else he would "Ook"."
   snekreligion.17_1:0 "Let him have the bananas"
   snekreligion.17_2:0 "We cannot afford it!"
+ 
+ #Halfdan pretenders
+  snekreligion.101_name:0 "The Halfdan Pretender"
+  snekreligion.101_desc:0 "Ever since the revolution of 1444, pretenders to the throne have waited abroad to overthrow our fledgling republic. Citing the prophecy of Halfdan, they claim to be backed by Snek and call our government a puppet of the pope. Bruce Halfdan has crossed the border in aims to seize the capital and crown himself Jarl."
+  snekreligion.101_1:0 "We will surrender to no tyranny!"
+
+#end_of_halfdan
+  snekreligion.102_name:0 "End of Halfdan"
+  snekreligion.102_desc:0 "The last Halfdan pretender has died in exile without an heir, marking the end of the dynasty. Their supporters have gone into hiding and with their claim to the throne extinct, the royalist movement has taken a major blow. A major threat to our republic has been left to the history books."
+  snekreligion.102_1:0 "Good Riddance!"
+
+#dawn_of_a_people
+  snekreligion.103_name:0 "Dawn of A People"
+  snekreligion.103_desc:0 "For centuries, the Dutch have migrated in large numbers to Britain and settled with the locals. Over time cultural lines have been blurred and now many Dutch migrants have now integrated into their local communities. Despite the governments best efforts to enforce Dutch culture on the locals, decades of commerce and intermarriage have led to a unique melting pot of culture which is neither Anglo-Saxon or Dutch. These communities were initially disjointed and lacked a central identity, however with the invention of the printing press the first ‘Nedersakisch’ dictionaries have been produced. Despite being banned by the state, these dictionaries have spread across the island, leading to a birth of Nedersakisch art, culture and writing. Many are now demanding representation in Government and an end to discriminatory practices."
+  snekreligion.103_1:0 "Uneducated Rabbles"
