--- a/localisation/snekreligion_l_english.yml
+++ b/localisation/snekreligion_l_english.yml
@@ -108,7 +108,7 @@
 
  #Rebalancing the Scales of Justice 
   snekreligion.12_name:0 "Rebalancing the Scales of Justice"
-  snekreligion.12_desc:0 "At the end of the 7th century, the Catholic Saint Patrick renounced his ties to the Victorian-Snekkist church. A horde of Snakes, concerned for his immortal soul, petitioned him to come back, begging that he accept the word of Victoria, and return to awaiting Her return. Disgusted, he cast them into the sea, exiling them from their homelands. As a final insult he then came to the Irish, and taught them of the heretic Church of Christ. Millions of Snakes perished, all for the soul of one man. For these crimes, we must take back these lands, and return them to her scaled embrace."
+  snekreligion.12_desc:0 "At the end of the 7th century, the Catholic Saint Patrick renounced his ties to the Victorian-Snekkist church. A horde of Snakes, concerned for his immortal soul, petitioned him to come back, begging that he accept the word of Victoria, and await her return. Disgusted, he cast them into the sea, exiling them from their homelands. As a final insult he then came to the Irish, and taught them of the heretic Church of Christ. Millions of Snakes perished, all for the soul of one man. For these crimes, we must take back these lands, and return them to her scaled embrace."
   snekreligion.12_1:0 "Thisss isss a lossss that mussst be avenged"
   
  #Holy site reclamed: London
